# news-mcp

./: .env.docker  .env.example  .env.worker  .env.worker.example  .gitignore  .mcp.json.README.md  .mcp.json.example  .pre-commit-config.yaml  .qmagent_last_check  .qmagent_tasks.json  .ruff.toml  .watchignore  =1.3.0  ANALYSIS_API_CONSOLIDATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DOCUMENTATION_CLEANUP_2025-10-04.md  ENDPOINTS.md  ERD_DIAGRAM.md  FIXES_DOCUMENTATION.md  INDEX.md  LICENSE  MCP_DISCOVERY.md  MCP_SERVER_README.md  MONITORING.md  NAVIGATOR.md  README.md  README_QMAGENT.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  ROADMAP_OVERVIEW.md  ROADMAP_SPRINT1.md  SECURITY.md  SESSION_STATUS.md  (+43 more)
.dbeaver/: project-metadata.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alembic-check.yml  analysis-repo-check.yml  ci.yml  codeql.yml  docs.yml  release.yml  schemaspy.yml  test.yml
alembic/: env.py
alembic/versions/: 1cdf2db9772f_add_scraper_fields_to_feeds_and_items_.py  2f2749931b3d_add_pending_auto_analysis_queue.py  3d13c4217df7_add_llm_instruction_fields_to_content_.py  3ef8aa8f3453_add_latest_article_at_to_feeds.py  4d231da722a4_add_research_templates_and_research_.py  5d92cbb9e6b2_add_skip_tracking_to_analysis_runs.py  6bc647f8b1f0_add_auto_analyze_enabled_to_feeds.py  8fdd48058112_add_triggered_by_to_analysis_runs.py  9f81604f3222_rename_content_templates_to_special_.py  add_geopolitical_indexes.py  bc273d24eeea_add_updated_at_to_categories.py  c6186dc74ad9_add_preview_jobs_table.py  d81bbc503793_add_category_and_semantic_tags_to_.py  de68ec3b50e5_drop_basetablemodel_artifact_table.py  e21397e52471_add_run_queue_management_tables.py  e796582016c8_initial_baseline_from_existing_database.py  fc340788ce64_add_research_pipeline_tables.py
app/: config.py  database.py  dependencies.py  main.py  models.py  models_BACKUP_20250922_054307.py  models_OLD_DISABLED.py  models_legacy.py  schemas.py
app/api/: analysis_control.py  analysis_jobs.py  analysis_management.py  analysis_selection.py  analysis_worker_api.py  auto_analysis_monitoring.py  categories.py  config.py  database.py  feature_flags_admin.py  feed_limits.py  feeds.py  feeds_simple.py  health.py  htmx.py  htmx_legacy.py  items.py  metrics.py  processors.py  research.py  scheduler.py  semantic_network.py  sources.py  statistics.py  system.py  templates.py  user_settings.py  websocket_endpoint.py
app/core/: error_handlers.py  exceptions.py  health.py  logging_config.py  (+5 more)
config/: auto_analysis_config.json
docs/: ANALYSIS_COCKPIT_REQUIREMENTS.md  ANALYSIS_CONTROL_INTERFACE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTO_ANALYSIS_GUIDE.md  BASELINE_METRICS.md  CLEANUP_POLICY.md  CODEBASE_MAP.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPRECATIONS.md  DEVELOPER_SETUP.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  Database-Schema.md  ERD_MERMAID.md  FEATURES.md  FEATURE_FLAGS.md  GEOPOLITICAL_ANALYSIS_PLAN.md  GEOPOLITICAL_IMPLEMENTATION_SUMMARY.md  GO_LIVE_CHECKLIST.md  GO_LIVE_CHECKLIST_ANALYSIS.md  GO_LIVE_CHECKLIST_FEEDS.md  GO_LIVE_CHECKLIST_STATISTICS.md  GO_LIVE_CHECKLIST_TEMPLATE.md  MCP-AND-RESEARCH-STATUS.md  MCP-RESOURCES-SUMMARY.md  MCP_REFACTORING_ANALYSIS.md  OPEN_WEBUI_INTEGRATION.md  Perplexity-API-Reference.md  Perplexity-MCP-Integration-Analysis.md  QUICK-START-MCP-RESOURCES.md  README.md  REFACTOR_PLAN.md  RELEASE_NOTES_3.4.md  REPOSITORY_CUTOVER_PATTERN.md  REPOSITORY_POLICY.md  Research-Templates-Complete-Guide-verworfen.md  SCHEMA_IMPORT_WORKAROUND.md  (+6 more)
jobs/: dynamic_scheduler.py  fetcher.py  scheduler.py  scheduler_manager.py
mcp_server/: comprehensive_server.py  resources.py  schemas.py  server.py  v2_handlers.py
migrations/: 001_create_item_analysis.sql  002_create_analysis_runs.sql  002_item_analysis_upsert_fn.sql  20251003_add_feed_analytics_columns.sql
monitoring/: README.md
scripts/: analyze_tags.py  auto_analysis_rollout.py  backup-db.sh  batch_test_analysis.py  check-analysis-raw-sql.sh  check_migrations.py  create-schema.py  docker-logs.sh  docker-restart.sh  docker-start.sh  docker-stop.sh  fix_logging.py  fix_sources.py  generate_documentation.py  generate_erd.py  github_deploy.sh  go_live_check.py  go_live_check_analysis.py  go_live_check_feeds.py  go_live_check_statistics.py  go_live_check_template.py  index_check.py  qmagent.py  run_analysis.py  screenshot_tool.py  service-manager.sh  setup_cutover.sh  start-all-background.sh  start-all.sh  start-api-stable.sh  start-api.sh  start-mcp-bridge.sh  start-mcp.sh  start-playwright-mcp-local.sh  start-playwright-mcp.sh  start-scheduler-background.sh  start-scheduler.sh  start-web-server.sh  start-worker.sh  start_mcp_server.sh  (+3 more)
static/: news-mcp.css  test-job-ui.html
systemd/: news-analysis-worker.service  news-api.service  news-fetcher.service  news-mcp.service
templates/: analysis_cockpit_v4.html  analysis_control.html  analysis_control_refactored.html  auto_analysis.html  base.html  index.html  modals.html
test-results/: .last-run.json
tests/: test_analysis_upsert.py  test_backpressure.py  test_geopolitical_prompt.py  test_items_filters.py  test_llm_parse.py  test_prometheus_metrics.py
wiki/: API-Overview.md  Analysis-Cockpit.md  Architecture.md  Auto-Analysis-Dashboard.md  Claude-Desktop-Setup.md  Configuration.md  Dashboard-Overview.md  Database-Schema.md  Home.md  Installation.md  MCP-Examples.md  MCP-Integration.md  MCP-Remote-Access.md  Manager-Control-Center.md  Quick-Start.md  README.md  Reference-Environment.md  Reference-URLs.md  Troubleshooting-Common.md
windows-bridge/: BRIDGE-SETUP.md  DIRECT-CLIENT-SETUP.md  UPDATE-WINDOWS-CLIENT.md  bridge-package.json  direct-client-package.json  direct-http-mcp-client.js  mcp-news-bridge.js  setup-direct-client-windows.bat  setup-news-bridge-windows.bat  test-bridge.js  test-direct-client.js
(+272 files in other folders)
